# imageviewer

./: .clang-format  .markdownlint.json  CMakeLists.txt  NOTICE  README.md
include/imageviewer/: Image.h  ImageViewer.h  ShaderProgram.h  SquareVertexArray.h  Texture.h  glfw.h
src/: CMakeLists.txt  Image.cpp  ImageViewer.cpp  ShaderProgram.cpp  SquareVertexArray.cpp  Texture.cpp  config.h.in  main.cpp
src/shaders/: frag.glsl  vert.glsl
